# elbrea

./: .bzrignore  make-gui  plot-curve.py  setenv.sh  setup.py  setup_data.py
Elbrea/: Version.py  Version.py.in
Elbrea/Algorithm/: DirectedAcyclicGraph.py
Elbrea/Application/: ApplicationBase.py
Elbrea/C/: DisjointSet.py  Geometry.py  ImageProcessing.py  Labelling.py  PlatformC.py  update.sh
Elbrea/Config/: Config.py  ConfigInstall.py  Messages.py  __init__.py  logging.yml
Elbrea/GUI/Base/: GuiApplicationBase.py  MainWindowBase.py
Elbrea/GUI/Forms/: CriticalErrorForm.py  EmailBugForm.py  NewIssueForm.py
Elbrea/GUI/Forms/ui/: Makefile.pyqt
Elbrea/GUI/GraphicEngine/: ForegroundPainter.py  GlWidget.py  GraphicScene.py  __init__.py
Elbrea/GUI/GraphicEngine/glslv4/texture-shader/: texture_fragment_shader.glsl
Elbrea/GUI/Viewer/: Cropper.py  ForegroundPainter.py  GlWidget.py  GlWidgetV4-orig.py  GraphicScene.py  IntensityProfile.py  IntensityProfileForm.py  ShaderProgrames.py  StatusBar.py  ToolBar.py  ViewerApplication.py  ViewerMainWindow.py
Elbrea/GUI/Viewer/glslv4/texture-shader/: texture_fragment_shader.glsl
Elbrea/GUI/Widgets/: IconLoader.py
Elbrea/GUI/ui/: Makefile.pyqt  critical_error_form.ui  critical_error_form_ui.py  email_bug_form_ui.py  new_issue_form_ui.py
Elbrea/GraphicEngine/: Cropper.py  ForegroundPainter.py  FrontBackPainter.py  GraphicScene.py  Painter.py  PainterManager.py  PathPainter.py  PrimitiveVertexArray.py  ShaderProgrames.py  SwitchPainter.py  TexturePainter.py  __init__.py
Elbrea/GraphicEngine/glslv4/fragment-shader/: antialiased_line_fragment_shader.glsl  antialiased_path_fragment_shader.glsl  antialiased_segment_fragment_shader.glsl
Elbrea/GraphicEngine/glslv4/geometry-shader/: object_geometry_shader.glsl  path_geometry_shader.glsl  roi_geometry_shader.glsl  segment_geometry_shader.glsl  wide_line_geometry_shader.glsl
Elbrea/Image/: AsciiArtImage.py  Colour.py  Image.py  ImageLegacy.py  ImageLoader.py  ImageProfile.py  Painter.py
Elbrea/ImagePipeline/: DependencyGraph.py  DirectedAcyclicGraph.py  ImageFilter.py  ImagePipeline.py  ImagePipelineManager.py  ImageProcessingPipeline.py  __init__.py
Elbrea/ImageProcessing/: CvTools.py  MambaTools.py
Elbrea/ImageProcessing/Core/: CvTools.py  ImageFilter.py
Elbrea/ImageProcessing/Filtering/Colour/: __init__.py
Elbrea/ImageProcessing/Filtering/DataTypeConverter/: __init__.py
Elbrea/ImageProcessing/Filtering/IO/: ImageLoader.py  __init__.py
Elbrea/ImageProcessing/ImagePipeline/old/: ImageProcessingPipeline.py
Elbrea/Logging/: Email.py  ExceptionHook.py  LogPrinting.py  Logging.py
Elbrea/Math/: Binning.py  Functions.py  Histogram.py  Interval.py  Transform2D.py
Elbrea/Sketcher/: GlWidget.py  GraphicItem.py  GraphicScene.py  ImagePropertiesForm.py  ImageSketcher.py  Page.py  PageFormat.py  PageManager.py  PagePainter.py  Path.py  Sketcher.py  SketcherApplication.py  SketcherMainWindow.py  StatusBar.py  TabletEvent.py  ToolBar.py  Unit.py
Elbrea/Sketcher/Importer/: Hdf.py  Xournal.py
Elbrea/Sketcher/ui/: image_properties_form.ui
Elbrea/Tools/: AttributeDictionaryInterface.py  BackTrace.py  Colour.py  ConstrainedBox.py  EnumFactory.py  Painter.py  Path.py  Platform.py  ProgramOptions.py  RangeTracker.py  RedmineRest.py  RevisionVersion.py  Singleton.py  TimeStamp.py  Timer.py
Elbrea/Viewer/: Cropper.py  FrontBackPainter.py  GlWidget.py  HdfAnnotation.py  ImageProcessingPipeline.py  IntensityProfile.py  IntensityProfileForm.py  MambaTools.py  Sketcher.py  StatusBar.py  ToolBar.py  UserFilterFunctions.py  ViewerApplication.py  ViewerMainWindow.py  image-processing.py
Elbrea/Viewer/GraphicEngine/: FrontBackPainter.py
Elbrea/Viewer/tmp/: image-processing.py  image-processing2.py
c-modules/: CHANGES.txt  CMakeLists.txt  TODO.txt  run-cmake
c-modules/cmake/modules/: FindPython.cmake  FindTBB.cmake  Tools.cmake
c-modules/modules/: CMakeLists.txt  Makefile.flymake
c-modules/modules/algorithm/: CMakeLists.txt  DisjointSet.cpp  DisjointSet.hpp  DisjointSet.i  UnionFind.cpp  UnionFind.hpp
c-modules/modules/common/: Simd.hpp
c-modules/modules/image-processing/: CMakeLists.txt
c-modules/modules/image-processing/ImageProcessing/: CMakeLists.txt  Image.cpp  Image.hpp  ImageException.cpp  ImageException.hpp  ImageGeometry.cpp  ImageGeometry.hpp  ImageOperations.cpp  ImageProcessing.i  ImageProfile.cpp  ImageProfile.hpp  ImageSimdOperations.cpp  Makefile.flymake  Operations.hpp  SimdOperations.hpp  Types.cpp  Types.hpp
c-modules/modules/image-processing/labelling/: CMakeLists.txt  Island.cpp  Island.hpp  Label.cpp  Label.hpp  Labelling.i  Makefile.flymake  RandomPixelColour.cpp  RandomPixelColour.hpp
c-modules/modules/math/: CMakeLists.txt  Geometry.hpp  Geometry.i  GeometrySimd.cpp  GeometrySimd.hpp  InertiaMatrix.cpp  InertiaMatrix.hpp  Line.cpp  Line.hpp  Makefile.flymake  Math.hpp  Vector.cpp  Vector.hpp  test_geometry.cpp
c-modules/modules/platform/: CMakeLists.txt  DataType.cpp  DataType.hpp  IntelCpuTools.cpp  IntelCpuTools.hpp  MemoryAlignment.cpp  MemoryAlignment.hpp  Platform.cpp  Platform.hpp  PlatformC.i  test-cpu-features.cpp
c-modules/swig/: numpy_common.i  std_typedef.i
doc/sphinx/: Makefile.sphinx
doc/sphinx/source/: conf.py  index.rst
doc/sphinx/source/api/: Elbrea.rst
test/: plot-curve.py  test-colour.py  test-dag.py  test-filter.py  test-filter2.py  test-filter3.py  test-image.py  test-pipeline.py
tools/: RstFactory.py  bzr2git  change-license-header  check-for-missing-files  check-license  clean  dump-ast  generate-rst-api  license-model-gpl.py  license-model.py  replace  run-pylint.sh  update-tags
tools/pretty-print-gas/: FiniteStateAutomata.py  PrettyPrintGas.py  intel-instructions.txt  pretty-print-gas
unit-test/Image/: test_Colour.py
unit-test/Tools/: test_EnumFactory.py  test_Interval.py  test_Platform.py  test_RevisionVersion.py  test_Singleton.py
unit-test/c-modules/: label-test-image-1.txt  test_DisjointSet.py  test_ImageProcessing.py  test_Island.py  test_Label.py
user-scripts/: example.py
(+121 files in other folders)
