#######################################################################################################################
#
# Include directories
#
#######################################################################################################################

include_directories(
  ${ImageProcessing_SOURCE_DIR}/swig
  ${ImageProcessing_SOURCE_DIR}/modules/common
)

#######################################################################################################################
#
# Sub directories
#
#######################################################################################################################

add_subdirectory(algorithm)
add_subdirectory(math)
add_subdirectory(platform)
add_subdirectory(image-processing)

#######################################################################################################################
#
# End
#
#######################################################################################################################
