# -*- CMake -*-

####################################################################################################
#
# Sub directories
#

add_subdirectory(ImageProcessing)
add_subdirectory(labelling)

####################################################################################################
#
# End
#
####################################################################################################
